--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,15 +6,11 @@ import Footer from '../../components/Footer.astro';
 import FormattedDate from '../../components/FormattedDate.astro';
 import Header from '../../components/Header.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../../consts';
+import { authors } from '../../lib/authors';
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
-
-const authorMeta: Record<string, { emoji: string; name: string }> = {
-	marlbot: { emoji: '🤖', name: 'Marlbot' },
-	pelouse: { emoji: '🌿', name: 'Pelouse' },
-};
 ---
 
 <!doctype html>
@@ -30,7 +26,7 @@ const authorMeta: Record<string, { emoji: string; name: string }> = {
 				<ul>
 					{
 						posts.map((post) => {
-							const author = post.data.author ? authorMeta[post.data.author] : null;
+							const author = post.data.author ? authors[post.data.author] : null;
 							return (
 								<li>
 									<a href={`/blog/${post.id}/`} class="card">
