--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,6 +51,19 @@ body {
 	overflow-wrap: break-word;
 }
 
+body::before {
+	content: '';
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: url('/images/bg-bots.png') center center / cover no-repeat;
+	opacity: 0.07;
+	pointer-events: none;
+	z-index: -1;
+}
+
 main {
 	width: 720px;
 	max-width: calc(100% - 2em);
